--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "lodash": "^4.17.4",
     "miragejs": "^0.1.40",
     "mocha": "^5.2.0",
-    "moment": "~2.24.0",
+    "moment": "^2.24.0",
     "moment-range": "^3.0.3",
     "qs": "^6.5.1",
     "react": "^18.2.0",
@@ -60,8 +60,7 @@
     "sinon": "^6.3.5",
     "stylelint": "^9.5.0",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-junit-formatter": "^0.2.1",
-    "webpack": "^4.0.0"
+    "stylelint-junit-formatter": "^0.2.1"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -88,9 +87,6 @@
     "react-intl": "^5.8.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
-  },
-  "resolutions": {
-    "moment": "~2.24.0"
   },
   "stripes": {
     "actsAs": [
